@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999973';
+our $VERSION='0.99999974';
 
 
 use 5.005;
